--- a/index.html
+++ b/index.html
@@ -13,5 +13,35 @@
     />
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="menu">
+        <ul class="menu__nav">
+          <li class="menu__nav__item current">
+            <a href="" class="menu__nav__link">Orders</a>
+          </li>
+          <li class="menu__nav__item">
+            <a href="" class="menu__nav__link">Accessories</a>
+          </li>
+          <li class="menu__nav__item">
+            <a href="" class="menu__nav__link">Aluminium</a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="orders">
+        <h2 class="orders__title">Orders</h2>
+        <button>All</button>
+        <select name="orders-filter" required="required">
+          <option value="">Filter</option>
+          <option value="1">Синий</option>
+          <option value="2">Зеленый</option>
+          <option value="3">Желтый</option>
+          <option value="4">Красный</option>
+          <option value="5">Оранжевый</option>
+          <option value="6">Черный</option>
+        </select>
+      </section>
+    </main>
+  </body>
 </html>
