table with css and content

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <body>
     <main>
       <div class="main__container">
+        <!--Menu Section-->
+
         <section class="menu">
           <ul class="menu__nav">
             <li class="menu__nav__item current">
@@ -30,6 +32,8 @@
           </ul>
         </section>
 
+        <!--Orders Section-->
+
         <section class="orders">
           <h2 class="orders__title">ORDERS</h2>
           <button>All</button>
@@ -42,6 +46,298 @@
             <option value="5">Оранжевый</option>
             <option value="6">Черный</option>
           </select>
+          <input type="text" name="search" placeholder="Search" />
+
+          <!--Orders Table-->
+
+          <div class="table__section">
+            <table class="orders__table">
+              <thead>
+                <tr>
+                  <th class="orders__table__title">Order Number</th>
+                  <th class="orders__table__title">Creation Date</th>
+                  <th class="orders__table__title">Total Quantity</th>
+                  <th class="orders__table__title">Customer Details</th>
+                  <th class="orders__table__title">Shipping Type</th>
+                  <th class="orders__table__title">Status</th>
+                  <th></th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td class="orders__table__item">№ 0009450</td>
+                  <td class="orders__table__item">12-05-2023, 08:22AM</td>
+                  <td class="orders__table__item">133 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Priority Mail</td>
+                  <td class="orders__table__item">Processing</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009449</td>
+                  <td class="orders__table__item">12-05-2023, 07:04AM</td>
+                  <td class="orders__table__item">205 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Free Shipping</td>
+                  <td class="orders__table__item">Processing</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009448</td>
+                  <td class="orders__table__item">12-05-2023, 07:02AM</td>
+                  <td class="orders__table__item">10 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Priority Mail</td>
+                  <td class="orders__table__item">Processing</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009447</td>
+                  <td class="orders__table__item">12-05-2023, 06:22AM</td>
+                  <td class="orders__table__item">25 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Priority Mail</td>
+                  <td class="orders__table__item">Ready for Shipment</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009446</td>
+                  <td class="orders__table__item">12-05-2023, 06:15AM</td>
+                  <td class="orders__table__item">270 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Free Shipping</td>
+                  <td class="orders__table__item">In Transit</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009445</td>
+                  <td class="orders__table__item">12-05-2023, 01:51AM</td>
+                  <td class="orders__table__item">11 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Free Shippeng</td>
+                  <td class="orders__table__item delivered">Delivered</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009444</td>
+                  <td class="orders__table__item">12-05-2023, 01:47AM</td>
+                  <td class="orders__table__item">03 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Priority Mail</td>
+                  <td class="orders__table__item delivered">Delivered</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009443</td>
+                  <td class="orders__table__item">12-05-2023, 01:41AM</td>
+                  <td class="orders__table__item">20 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Priority Mail</td>
+                  <td class="orders__table__item">Processing</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009442</td>
+                  <td class="orders__table__item">12-05-2023, 01:37AM</td>
+                  <td class="orders__table__item">15 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Free Shipping</td>
+                  <td class="orders__table__item">Processing</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009441</td>
+                  <td class="orders__table__item">12-05-2023, 01:37AM</td>
+                  <td class="orders__table__item">03 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Free Shipping</td>
+                  <td class="orders__table__item">Processing</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009440</td>
+                  <td class="orders__table__item">12-05-2023, 01:35AM</td>
+                  <td class="orders__table__item">121 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Priority Mail</td>
+                  <td class="orders__table__item">Ready for Shipping</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009439</td>
+                  <td class="orders__table__item">12-05-2023, 01:20AM</td>
+                  <td class="orders__table__item">45 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Priority Mail</td>
+                  <td class="orders__table__item">In Transit</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009438</td>
+                  <td class="orders__table__item">12-05-2023, 01:19AM</td>
+                  <td class="orders__table__item">76 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Free Shipping</td>
+                  <td class="orders__table__item cancelled">Cancelled</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009437</td>
+                  <td class="orders__table__item">12-05-2023, 01:19AM</td>
+                  <td class="orders__table__item">140 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Free Shipping</td>
+                  <td class="orders__table__item delivered">Delivered</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+                <tr>
+                  <td class="orders__table__item">№ 0009436</td>
+                  <td class="orders__table__item">12-05-2023, 01:15AM</td>
+                  <td class="orders__table__item">140 pcs</td>
+                  <td class="orders__table__item">
+                    Jack Sherman, Sunrise Erectors
+                  </td>
+                  <td class="orders__table__item">Priority Mail</td>
+                  <td class="orders__table__item">Ready for Shipment</td>
+                  <td class="orders__table__item">
+                    <button type="button" class="details__btn">DETAILS</button>
+                  </td>
+                  <td class="orders__table__item">
+                    <button type="button" class="action__btn">
+                      START PACKING
+                    </button>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </section>
       </div>
     </main>
