--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
                   <td class="orders__table__item">Priority Mail</td>
                   <td class="orders__table__item">Processing</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -93,7 +98,12 @@
                   <td class="orders__table__item">Free Shipping</td>
                   <td class="orders__table__item">Processing</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -111,7 +121,12 @@
                   <td class="orders__table__item">Priority Mail</td>
                   <td class="orders__table__item">Processing</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -129,7 +144,12 @@
                   <td class="orders__table__item">Priority Mail</td>
                   <td class="orders__table__item">Ready for Shipment</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -147,7 +167,12 @@
                   <td class="orders__table__item">Free Shipping</td>
                   <td class="orders__table__item">In Transit</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -165,7 +190,12 @@
                   <td class="orders__table__item">Free Shippeng</td>
                   <td class="orders__table__item delivered">Delivered</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -183,7 +213,12 @@
                   <td class="orders__table__item">Priority Mail</td>
                   <td class="orders__table__item delivered">Delivered</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -201,7 +236,12 @@
                   <td class="orders__table__item">Priority Mail</td>
                   <td class="orders__table__item">Processing</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -219,7 +259,12 @@
                   <td class="orders__table__item">Free Shipping</td>
                   <td class="orders__table__item">Processing</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -237,7 +282,12 @@
                   <td class="orders__table__item">Free Shipping</td>
                   <td class="orders__table__item">Processing</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -255,7 +305,12 @@
                   <td class="orders__table__item">Priority Mail</td>
                   <td class="orders__table__item">Ready for Shipping</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -273,7 +328,12 @@
                   <td class="orders__table__item">Priority Mail</td>
                   <td class="orders__table__item">In Transit</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -291,7 +351,12 @@
                   <td class="orders__table__item">Free Shipping</td>
                   <td class="orders__table__item cancelled">Cancelled</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -309,7 +374,12 @@
                   <td class="orders__table__item">Free Shipping</td>
                   <td class="orders__table__item delivered">Delivered</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
@@ -327,7 +397,12 @@
                   <td class="orders__table__item">Priority Mail</td>
                   <td class="orders__table__item">Ready for Shipment</td>
                   <td class="orders__table__item">
-                    <button type="button" class="details__btn">DETAILS</button>
+                    <button type="button" class="details__btn">
+                      DETAILS
+                      <svg class="contacts-icon" width="32" height="32">
+                        <use href="./images/icons.svg#icon-chevron-down"></use>
+                      </svg>
+                    </button>
                   </td>
                   <td class="orders__table__item">
                     <button type="button" class="action__btn">
