--- a/index.html
+++ b/index.html
@@ -449,6 +449,17 @@
               </tbody>
             </table>
           </div>
+          <div class="pagination">
+            <div class="pagination__shown">
+              <p class="pagination__title">Shown per page:</p>
+              <div class="pagination__page__quantity">
+                20
+                <svg class="icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-chevron-down"></use>
+                </svg>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </main>
