pagination is ready

--- a/index.html
+++ b/index.html
@@ -75,12 +75,17 @@
                   <use href="./images/icons.svg#icon-chevron-down"></use>
                 </svg>
               </div>
-              <input
-                class="orders__filter__search"
-                type="text"
-                name="search"
-                placeholder="Search"
-              />
+              <div class="input-with-icon">
+                <svg class="icon__search" width="16" height="16">
+                  <use href="./images/icons.svg#icon-magnifying"></use>
+                </svg>
+                <input
+                  class="orders__filter__search"
+                  type="text"
+                  name="search"
+                  placeholder="Search"
+                />
+              </div>
             </div>
           </div>
 
@@ -96,8 +101,8 @@
                   <th class="orders__table__title">Customer Details</th>
                   <th class="orders__table__title">Shipping Type</th>
                   <th class="orders__table__title">Status</th>
-                  <th></th>
-                  <th></th>
+                  <th class="orders__table__title"></th>
+                  <th class="orders__table__title"></th>
                 </tr>
               </thead>
               <tbody>
@@ -457,6 +462,24 @@
                 <svg class="icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-chevron-down"></use>
                 </svg>
+              </div>
+            </div>
+
+            <div class="pagination__right">
+              <div class="pagination__pages">1-20 of 45</div>
+              <div class="pagination__btns">
+                <div class="icon__thumb">
+                  <svg class="icon__left" width="17" height="17">
+                    <use href="./images/icons.svg#icon-chevron-down"></use>
+                  </svg>
+                </div>
+                <div class="pagination__number current__page">1</div>
+                <div class="pagination__number">2</div>
+                <div class="icon__thumb">
+                  <svg class="icon__right" width="17" height="17">
+                    <use href="./images/icons.svg#icon-chevron-down"></use>
+                  </svg>
+                </div>
               </div>
             </div>
           </div>
